--- a/method_C/visualize-enrichments.Rmd
+++ b/method_C/visualize-enrichments.Rmd
@@ -37,20 +37,32 @@ plot.dir <- work.dir %&% "plots/"
 
 library("viridis")
 
+firstup <- function(x) {
+   substr(x, 1, 1) <- toupper(substr(x, 1, 1))
+x
+}
+
+
 eqtl_enrich_plot <- function(enrich.df,myname){
-  ggplot(data=enrich.df,aes(x=tissue,y=enrichment)) + 
-    geom_point(size=2,shape=21,aes(fill=-log(pvalue,base=10))) + #,shape=as.factor(threshold))) + 
-    facet_wrap(~eQTL+threshold) + 
+  enrich.df$tissue <- enrich.df$tissue %>% firstup(.)
+  enrich.df$eQTL <- enrich.df$eQTL %>% firstup(.)
+  plt <- ggplot(data=enrich.df,aes(x=threshold,y=enrichment)) + 
+    geom_point(color="black",size=2,shape=21,aes(fill=-log(pvalue,base=10))) + #,shape=as.factor(threshold))) + 
+    facet_wrap(~eQTL+tissue) + 
     theme_bw() + 
     scale_y_log10(breaks=c(0.5,2,10,50)) +
-    #scale_shape_manual(values=c(21,22,23,24),name="Classifer Threshold") +
-    scale_fill_gradient2(low=viridis(n=2)[2],high=viridis(n=2)[1],
+    scale_fill_gradient2(low=viridis(n=50)[48],high=viridis(n=50)[10],
+                         mid = viridis(n=50)[40],
                          midpoint=-log(0.05,base=10),name=expression(-log10(p))) + 
-    xlab("Classified Tissue") + ylab("Enrichment") + 
+    xlab("Threshold") + ylab("Enrichment") + 
     ggtitle(myname) +
-    theme(axis.text.x=element_text(angle=30,vjust=0.6)) #+ coord_cartesian(ylim=c(0,20)) + +
+    theme(axis.text.x=element_text(vjust=0.6),
+          panel.grid.minor = element_blank(),
+          panel.grid.major.x=element_blank(),
+          legend.key = element_rect(color="black",size=3),
+          strip.background =element_rect(fill="ghostwhite"),
+          strip.text = element_text(colour = magma(n=2)[1]))
 
-  
 }
  
 ```
@@ -90,26 +102,10 @@ df4 <- fread(work.dir %&% "analysis_files/downsampled_eqtl-specific-validation_w
 plt3 <- eqtl_enrich_plot(df3,myname="eQTL enrichment for classifed loci (unweighted, downsampled)")
 ggsave(plot=plt3,filename = plot.dir %&% "downsampled_enrichment-eqtl-specific_unweighted.png",width=9,height=6.5)
 plt4 <- eqtl_enrich_plot(df4,myname="eQTL enrichment for classifed loci (weighted, downsampled)")
-ggsave(plot=plt4,filename = plot.dir %&% "downsampled_enrichment-eqtl-specific_weighted.png",width=9,height=6.5)
-
-
-```
-
-
-Lookup values 
-
-
-```{r}
-
-#filter(df4,eQTL=="islet")
-#filter(df4,eQTL=="adipose")
-#filter(df4,eQTL=="liver")
-#filter(df4,eQTL=="muscle")
+ggsave(plot=plt4,filename = plot.dir %&% "downsampled_enrichment-eqtl-specific_weighted.png",width=8,height=6)
+ggsave(plot=plt4,filename = plot.dir %&% "downsampled_enrichment-eqtl-specific_weighted.pdf",width=8,height=6)
 
 ```
-
-
-
 
 
 # ATAC enrichments 
@@ -118,16 +114,23 @@ Lookup values
 ```{r}
 
 atac_enrich_plot <- function(enrich.df,myname){
-  ggplot(data=enrich.df,aes(x=tissue,y=enrich.factor)) + 
+  enrich.df$tissue <- enrich.df$tissue %>% firstup(.)
+  enrich.df$atac <- enrich.df$atac %>% firstup(.)
+  plt <- ggplot(data=enrich.df,aes(x=threshold,y=enrich.factor)) + 
     geom_point(size=2,aes(fill=-log(p.val,base=10)),shape=21) + #shape=as.factor(threshold))) + 
-    facet_wrap(~atac+threshold) + 
+    facet_wrap(~atac+tissue) + 
     theme_bw() + 
-    #scale_shape_manual(values=c(21,22,23,24),name="Classifer Threshold") +
-    scale_fill_gradient2(low=viridis(n=2)[2],high=viridis(n=2)[1],
+    scale_fill_gradient2(low=viridis(n=50)[48],high=viridis(n=50)[10],
+                         mid = viridis(n=50)[40],
                          midpoint=-log(0.05,base=10),name=expression(-log10(p))) + 
-    xlab("Classified Tissue") + ylab("Enrichment") + 
+    xlab("Threshold") + ylab("Enrichment") + 
     ggtitle(myname) +
-    theme(axis.text.x=element_text(angle=30,vjust=0.6))
+    theme(axis.text.x=element_text(vjust=0.6),
+          panel.grid.minor = element_blank(),
+          panel.grid.major.x=element_blank(),
+          legend.key = element_rect(color="black",size=3),
+          strip.background =element_rect(fill="ghostwhite"),
+          strip.text = element_text(colour = magma(n=2)[1]))
 }
 
 ```
