--- a/method_C/08_V_physiology-loci-enrichment.Rmd
+++ b/method_C/08_V_physiology-loci-enrichment.Rmd
@@ -30,18 +30,23 @@ work.dir <-  proj.dir %&% "method_C/"
 
 cred.df <- fread(work.dir %&% "genetic_credible_sets/gencred.txt")
 
-write.dir <- work.dir   #"/home/jason/science/projects/t2d_classification/method_C/"
+write.dir <- work.dir   
+
+
+phys71.df <- fread(proj.dir %&% "analysis_files/physiology-hard.txt")
+phys94.df <- fread(proj.dir %&% "analysis_files/physiology-fuzzy.txt")
+names(phys94.df)[2] <- "Physiology" 
 
 ```
 
 
 ```{r}
 
-phys.df <- fread(proj.dir %&% "analysis_files/physiology_hrc_for_Jason.txt")
-phys.df$Locus.ID_inCREDS <- map(1:dim(phys.df)[1],function(i){
-  s <- phys.df$Locus.ID_inCREDS[i]
-  ifelse(grepl("_",s)==FALSE,s%&%"_1",s)
-}) %>% as.character(.)
+#phys.df <- fread(proj.dir %&% "analysis_files/physiology_hrc_for_Jason.txt")
+#phys.df$Locus.ID_inCREDS <- map(1:dim(phys.df)[1],function(i){
+#  s <- phys.df$Locus.ID_inCREDS[i]
+#  ifelse(grepl("_",s)==FALSE,s%&%"_1",s)
+#}) %>% as.character(.)
 
 ```
 
@@ -88,6 +93,8 @@ write.table(x=df.2,file=write.dir %&% "analysis_files/classified-loci_weighted_r
 
 
 
+# Enrichment functions 
+
 ```{r}
 
 enrich_test <- function(query.vec,ref.vec,iter=10000){
@@ -108,10 +115,10 @@ enrich_test <- function(query.vec,ref.vec,iter=10000){
   return(out.df)
 }
 
-build_enrich_df <- function(class.df){
+build_enrich_df <- function(class.df,phys.df){
   tvec <- c("assigned_00","assigned_20","assigned_50","assigned_80")
   tiss.vec <- c("islet","liver","adipose","muscle","peripheral")
-  phys.vec <- c("BMI-Dys","Insulin_Action","Insulin_Secretion")
+  phys.vec <- phys.df$Physiology  %>% unique(.)
   out.df <- c()
   for (t in tvec){
     cond <- "Cond.ID"
@@ -125,7 +132,8 @@ build_enrich_df <- function(class.df){
         query.vec <- filter(sub,assigned==tiss)$Cond.ID %>% unique(.)
       }
       for (phys in phys.vec){
-        ref.vec <- filter(phys.df,Physiology==phys)$Locus.ID_inCREDS %>% 
+        print("Threshold: " %&% t %&% " Tissue: " %&% tiss %&% " Physiology: " %&% phys)
+        ref.vec <- filter(phys.df,Physiology==phys)$Locus.ID %>% 
           unique(.)
         test.df <- enrich_test(query.vec,ref.vec,iter=10000)
         test.df$threshold <- threshold; test.df$tissue <- tiss
@@ -148,30 +156,21 @@ build_enrich_df <- function(class.df){
 
 ```{r}
 
-df1 <- build_enrich_df(unweighted.df)
+df1 <- build_enrich_df(unweighted.df,phys71.df)
 write.table(x=df1,file = write.dir %&% "analysis_files/" %&% 
-              "phys-enrich_unweighted.txt",sep="\t",quote=F,row.names=F)
-
-df2 <- build_enrich_df(weighted.df)
+              "phys71-enrich_unweighted.txt",sep="\t",quote=F,row.names=F)
+df2 <- build_enrich_df(unweighted.df,phys94.df)
 write.table(x=df2,file = write.dir %&% "analysis_files/" %&% 
-              "phys-enrich_weighted.txt",sep="\t",quote=F,row.names=F)
+              "phys94-enrich_unweighted.txt",sep="\t",quote=F,row.names=F)
+df3 <- build_enrich_df(weighted.df,phys71.df)
+write.table(x=df3,file = write.dir %&% "analysis_files/" %&% 
+              "phys71-enrich_weighted.txt",sep="\t",quote=F,row.names=F)
+df4 <- build_enrich_df(weighted.df,phys94.df)
+write.table(x=df4,file = write.dir %&% "analysis_files/" %&% 
+              "phys94-enrich_weighted.txt",sep="\t",quote=F,row.names=F)
+
 
 ```
-
-# Sanity check 
-
-```{r}
-
-#ids <- unique(phys.df$Locus.ID_inCREDS)
-#for (id in ids){
-#  g <- filter(phys.df,Locus.ID_inCREDS==id)$GENE_LABEL
-#  g2 <- filter(cred.df,CondID==id)$symbol %>% unique(.)
-#  print(c(id,g,g2))
-#}
- 
-
-```
-
 
 
 
@@ -201,12 +200,12 @@ enrich_test_v2 <- function(phys.vec, tissue, class.df,iter=10000){
 }
 
 
-build_enrich_df_v2 <- function(class.df){
+build_enrich_df_v2 <- function(class.df,phys.df){
   tiss.vec <- c("islet","liver","adipose","muscle","peripheral")
-  phys.vec <- c("BMI-Dys","Insulin_Action","Insulin_Secretion")
+  phys.vec <- phys.df$Physiology  %>% unique(.)
   out.df <- c()
   for (phys in phys.vec){
-    query.vec <- filter(phys.df,Physiology==phys)$Locus.ID_inCREDS %>% 
+    query.vec <- filter(phys.df,Physiology==phys)$Locus.ID %>% 
       unique(.)    
     for (tiss in tiss.vec){
       test.df <- enrich_test_v2(query.vec,tiss,class.df,iter=10000)
@@ -226,13 +225,20 @@ build_enrich_df_v2 <- function(class.df){
 
 
 ```{r}
-df3 <- build_enrich_df_v2(unweighted.df)
-write.table(x=df3,file = write.dir %&% "analysis_files/" %&% 
-              "phys-enrich-V2_unweighted.txt",sep="\t",quote=F,row.names=F)
 
-df4 <- build_enrich_df_v2(weighted.df)
-write.table(x=df4,file = write.dir %&% "analysis_files/" %&% 
-              "phys-enrich-V2_weighted.txt",sep="\t",quote=F,row.names=F)
+df1b <- build_enrich_df_v2(unweighted.df,phys71.df)
+write.table(x=df1b,file = write.dir %&% "analysis_files/" %&% 
+              "phys71-enrich_unweighted-V2.txt",sep="\t",quote=F,row.names=F)
+df2b <- build_enrich_df_v2(unweighted.df,phys94.df)
+write.table(x=df2b,file = write.dir %&% "analysis_files/" %&% 
+              "phys94-enrich_unweighted-V2.txt",sep="\t",quote=F,row.names=F)
+df3b <- build_enrich_df_v2(weighted.df,phys71.df)
+write.table(x=df3b,file = write.dir %&% "analysis_files/" %&% 
+              "phys71-enrich_weighted-V2.txt",sep="\t",quote=F,row.names=F)
+df4b <- build_enrich_df_v2(weighted.df,phys94.df)
+write.table(x=df4b,file = write.dir %&% "analysis_files/" %&% 
+              "phys94-enrich_weighted-V2.txt",sep="\t",quote=F,row.names=F)
+
 ```
 
 
