--- a/method_C/02.3_horizontal-stacked-barplots.Rmd
+++ b/method_C/02.3_horizontal-stacked-barplots.Rmd
@@ -52,6 +52,25 @@ weighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled.t
 ```
 
 
+# append lead rsID info 
+
+```{r}
+
+append_rslead <- function(df){
+  pb <- txtProgressBar(min=0,max=dim(df)[1],style=3)
+  lead.rsid <- map(1:dim(df)[1],function(i){
+      setTxtProgressBar(pb,i)
+      id <- df$Locus.ID[i]
+      filter(cred.df,CondID==id)$lead.rsid %>% unique(.)
+    }) %>% as.character(.)
+  df$lead.rsid <- lead.rsid
+  return(df)
+}
+
+
+```
+
+
 
 ```{r}
 
@@ -96,11 +115,15 @@ ppa_plot <- function(ppa.df,col.vec=c("olivedrab2","red","gold1","brown","grey")
   rank.by <- stringToQuoser(rankby)
   append.df <- ppa.df
   append.df$PlotID <- map(ppa.df$Locus.ID,function(loc.id){
-    loc.id %&% ": " %&% (filter(cred.df,CondID==loc.id)$symbol%>%unique(.))
+    sub <- filter(cred.df,CondID==loc.id) %>% dplyr::select(.,one_of("symbol","lead.rsid")) 
+    sub <- sub[!duplicated(sub),]
+    sub$symbol %&% " (" %&% sub$lead.rsid %&% ")"
+    #loc.id %&% ": " %&% (filter(cred.df,CondID==loc.id)$symbol%>%unique(.))
   }) %>% as.character(.)
   
   format.df <- reformat_ppa_df(ppa.df,cred.df)
-  PlotID <- paste0(format.df$Locus.ID,": ",format.df$Symbol)
+  format.df <- append_rslead(format.df)
+  PlotID <- paste0(format.df$Symbol," (",format.df$lead.rsid, ")")
   plot.df <- cbind(PlotID,format.df)
 
   
